force-app/main/default/objects/vlocity_cmt__QuoteMember__c/vlocity_cmt__QuoteMember__c.object-meta.xml
<CustomObject>
    <label>Quote Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>