force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__AddressValidationMessage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AddressValidationMessage__c</fullName>
    <description>The field is used to store validation messages after address validation (ex: Address Not Found/Alternate Address Found).</description>
    <label>Address Validation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>