force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__AddressValidationResult__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AddressValidationResult__c</fullName>
    <description>The field stores the outcome of validation of address from external system.</description>
    <label>Address Validation Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Fails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>