force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__BroadbandConnectionType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BroadbandConnectionType__c</fullName>
    <description>Derived from the Serviceability Data JSON</description>
    <label>Broadband Connection Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>