force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__Email__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Email__c</fullName>
    <description>Email information.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>