force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__PremisesId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PremisesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to premises.</description>
    <label>Premises</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>Quote Members</relationshipLabel>
    <relationshipName>QuoteMembers</relationshipName>
    <type>Lookup</type>
</CustomField>