force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__QuoteGroupId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Group to which the service point associated with this quote is linked.</description>
    <label>Quote Group</label>
    <referenceTo>vlocity_cmt__QuoteGroup__c</referenceTo>
    <relationshipLabel>Quote Members</relationshipLabel>
    <relationshipName>QuoteMembers</relationshipName>
    <type>Lookup</type>
</CustomField>