force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__SelectedAssetIds__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SelectedAssetIds__c</fullName>
    <description>selected asset ids (separted by comma) belong to this member.</description>
    <label>Selected Assets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>