force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__ServiceabilityLastCheckedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServiceabilityLastCheckedDate__c</fullName>
    <description>The field is store when the serviceability check was done last time.</description>
    <label>Serviceability Last Checked At</label>
    <type>DateTime</type>
</CustomField>