force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__ServiceAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the account with record type Service that identifies the service location.</description>
    <label>Service Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Members</relationshipLabel>
    <relationshipName>QuoteMembers</relationshipName>
    <type>Lookup</type>
</CustomField>