force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__ServicePointId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServicePointId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to service point.</description>
    <label>Service Point</label>
    <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
    <relationshipLabel>Quote Members</relationshipLabel>
    <relationshipName>QuoteMembers</relationshipName>
    <type>Lookup</type>
</CustomField>