force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/vlocity_cmt__Title__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Title__c</fullName>
    <description>Title information.</description>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>